Add groupId for grouping curations
